2011-05-05  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fhandler.cc (fhandler_base_overlapped::raw_read): Rename from
	read_overlapped.
	(fhandler_base_overlapped::raw_e): Rename from write_overlapped.
	* fhandler.h (fhandler_*::raw_read): Add reparm decoration.
	(fhandler_*::raw_write): Ditto.
	(fhandler_base_overlapped::raw_read): Rename from read_overlapped.
	(fhandler_base_overlapped::raw_write): Rename from write_overlapped.
	(fhandler_pipe::raw_read): Delete.
	(fhandler_pipe::raw_write): Ditto.
	(fhandler_mailslot::raw_read): Ditto.
	* fhandler_fifo.cc (fhandler_fifo::raw_read): Reflect read_overlapped
	-> raw_read rename.
	(fhandler_fifo::raw_write): Ditto.
	* fhandler_mailslot.cc (fhandler_mailslot::raw_read): Delete.
	(fhandler_mailslot::raw_write): Reflect read_overlapped -> raw_read
	rename.
	* pipe.cc (fhandler_pipe::raw_read): Delete.
	(fhandler_pipe::raw_write): Ditto.

2011-05-05  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* fork.cc (fork): Clear PID_REAPED.
	* pinfo.cc (pinfo_init): Ditto.
	(pinfo::init): Check for PID_REAPED.
	* sigproc.cc (stopped_or_terminated): Ditto.

2011-05-05  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* pinfo.cc (_pinfo::exists): Check for PID_REAPED.

2011-05-05  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::pread): Correctly return
	with errno set to EBADF if file open mode is incorrect.
	(fhandler_disk_file::pwrite): Ditto.

2011-05-05  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc (is_at_eof): Drop static storage class.  Drop err
	parameter since we don't change the Win32 error here anymore.
	(fhandler_base::raw_read): Accommodate change to is_at_eof.

	* fhandler_disk_file.cc (fhandler_disk_file::pread): In binary mode use
	direct call to NtReadFile, rather than lseek/read.
	(fhandler_disk_file::pwrite): In binary mode use direct call to
	NtWriteFile, rather than lseek/write.

2011-05-05  Corinna Vinschen  <corinna@vinschen.de>
