@@ -1,3 +1,9 @@
+2011-05-05  Corinna Vinschen  <corinna@vinschen.de>
+
+	* syscalls.cc (readv): Add myfault handler.  Don't check repeatedly
+	open state of file handler.  Streamline loop.
+	(writev): Add myfault handler.
+
 2011-05-05  Christopher Faylor  <me.cygwin2011@cgf.cx>
 
 	* fhandler.cc (fhandler_base_overlapped::raw_read): Rename from
